# dieselrogue

./: .gitignore  Cargo.toml  LICENSE.TXT  README.md  bench_ai.ps1  build.rs
doc/: backlog.md  design.md  design.txt
resources/: male_silhouette.xp  player.xp  tank.xp  title.xp
resources/blocks/: block_10.txt  block_2.txt  block_3.txt  block_4.txt  block_5.txt  block_6.txt  block_7.txt  block_8.txt  block_9.txt  buildingblock_1.txt  buildingblock_2.txt  buildingblock_3.txt  buildingblock_4.txt  buildingblock_gen_mega_cross_v1.txt  buildingblock_gen_mega_dead_v1.txt  buildingblock_gen_mega_straight_v1.txt  buildingblock_gen_mega_straight_v2.txt  buildingblock_gen_mega_straight_v3.txt  buildingblock_gen_mega_t_v1.txt  buildingblock_gen_mega_turn_v1.txt  buildingblock_gen_v1.txt  buildingblock_gen_v2.txt  buildingblock_gen_v3.txt  buildingblock_gen_v4.txt  buildingblock_gen_v5.txt  buildingblock_gen_v6.txt  buildingblock_gen_v7.txt  buildingblock_gen_v8.txt  cornerblock_ne_1.txt  cornerblock_nw_1.txt  cornerblock_se_1.txt  cornerblock_sw_1.txt  edgeblock_1.txt  (+71 more)
src/: ability.rs  actions.rs  actor.rs  ai.rs  animation.rs  block.rs  body.rs  components.rs  damage_system.rs  enemy_ai_system.rs  entity.rs  error.rs  gamelog.rs  input.rs  intent.rs  inventory_system.rs  item.rs  main.rs  map.rs  map_indexing_system.rs  menu.rs  movement_system.rs  pathfinding.rs  player.rs  rect.rs  rex_assets.rs  saveload_system.rs  serde_collections.rs  settings.rs  spawn.rs  sprite.rs  state.rs  tank_ai_system.rs  tile.rs  ui.rs  util.rs  viewshed.rs  visibility_system.rs  world.rs
