[package]
name = "dieselrogue"
version = "0.1.0"
authors = ["Johan Larsson <johan.t.larsson@gmail.com>"]
edition = "2018"

[dependencies]
strum = { version = "0.26", features = ["derive"] }
rayon = "1"
rltk = {version = "*", features = ["serde"]}
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.39"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.24"
flate2 = "1"

