[package]
name = "dieselrogue"
version = "0.5.0"
authors = ["Johan Larsson <johan.t.larsson@gmail.com>"]
edition = "2018"
default-run = "dieselrogue"

[build-dependencies]
winres = "0.1"

[dependencies]
strum = { version = "0.26", features = ["derive"] }
rayon = "1"
rltk = {version = "*", features = ["serde"]}
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.39"
puffin = "0.20"
puffin_http = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.24"
flate2 = "1"

